docs/api/qiskit-ibm-runtime/0.32/utils-noise-learner-result-layer-error.mdx
---
title: LayerError (v0.32)
description: API reference for qiskit_ibm_runtime.utils.noise_learner_result.LayerError in qiskit-ibm-runtime v0.32
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.utils.noise_learner_result.LayerError
---

# LayerError

<Class id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.32/qiskit_ibm_runtime/utils/noise_learner_result.py#L136-L309" signature="LayerError(circuit, qubits, error=None)" modifiers="class">
  The error channel (in Pauli-Lindblad format) of a single layer of instructions.

  **Parameters**

  *   **circuit** ([`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit "(in Qiskit v1.2)")) – A circuit whose noise has been learnt.
  *   **qubits** (`Sequence`\[`int`]) – The labels of the qubits in the `circuit`.
  *   **error** (`Optional`\[[`PauliLindbladError`](utils-noise-learner-result-pauli-lindblad-error "qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError")]) – The Pauli Lindblad error channel affecting the `circuit`, or `None` if the error channel is either unknown or explicitly disabled.

  **Raises**

  **ValueError** – If `circuit`, `qubits`, and `error` have mismatching number of qubits.

  ## Attributes

  ### circuit

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.circuit">
    The circuit in this `LayerError`.

    **Return type**

    [`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit "(in Qiskit v1.2)")
  </Attribute>

  ### error

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.error">
    The error channel in this `LayerError`, or `None` if the error channel is either unknown or explicitly disabled.

    **Return type**

    `Optional`\[[`PauliLindbladError`](utils-noise-learner-result-pauli-lindblad-error "qiskit_ibm_runtime.utils.noise_learner_result.PauliLindbladError")]
  </Attribute>

  ### generators

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.generators">
    (DEPRECATED) The Pauli Lindblad generators of the error channel in this `LayerError`.

    **Return type**

    [`PauliList`](/docs/api/qiskit/qiskit.quantum_info.PauliList "(in Qiskit v1.2)")
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.num_qubits">
    The number of qubits in this [`LayerError`](#qiskit_ibm_runtime.utils.noise_learner_result.LayerError "qiskit_ibm_runtime.utils.noise_learner_result.LayerError").

    **Return type**

    `int`
  </Attribute>

  ### qubits

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.qubits">
    The qubits in this `LayerError`.

    **Return type**

    `list`\[`int`]
  </Attribute>

  ### rates

  <Attribute id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.rates">
    (DEPRECATED) The Lindblad generator rates of the error channel in this `LayerError`.

    **Return type**

    [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.1)")\[`Any`, [`dtype`](https://numpy.org/doc/stable/reference/generated/numpy.dtype.html#numpy.dtype "(in NumPy v2.1)")\[`float64`]]
  </Attribute>

  ## Methods

  ### draw\_map

  <Function id="qiskit_ibm_runtime.utils.noise_learner_result.LayerError.draw_map" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.32/qiskit_ibm_runtime/utils/noise_learner_result.py#L221-L301" signature="draw_map(embedding, colorscale='Bluered', color_no_data='lightgray', color_out_of_scale='lightgreen', num_edge_segments=16, edge_width=4, height=500, highest_rate=None, background_color='white', radius=0.25, width=800)">
    Draw a map view of a this layer error.

    **Parameters**

    *   **embedding** (`Union`\[`Embedding`, [`BackendV2`](/docs/api/qiskit/qiskit.providers.BackendV2 "(in Qiskit v1.2)")]) – An `Embedding` object containing the coordinates and coupling map to draw the layer error on, or a backend to generate an `Embedding` for.

    *   **colorscale** (`str`) – The colorscale used to show the rates of this layer error.

    *   **color\_no\_data** (`str`) – The color used for qubits and edges for which no data is available.

    *   **color\_out\_of\_scale** (`str`) – The color used for rates with value greater than `highest_rate`.

    *   **num\_edge\_segments** (`int`) – The number of equal-sized segments that edges are made of.

    *   **edge\_width** (`float`) – The line width of the edges in pixels.

    *   **height** (`int`) – The height of the returned figure.

    *   **highest\_rate** (`Optional`\[`float`]) – The highest rate, used to normalize all other rates before choosing their colors. If `None`, it defaults to the highest value found in the `layer_error`.

    *   **background\_color** (`str`) – The background color.

    *   **radius** (`float`) – The radius of the pie charts representing the qubits.

    *   **width** (`int`) – The width of the returned figure.

    *   **code:** (*..*) –

        python: from qiskit import QuantumCircuit from qiskit.quantum\_info import PauliList from qiskit\_ibm\_runtime.utils.embeddings import Embedding from qiskit\_ibm\_runtime.utils.noise\_learner\_result import LayerError, PauliLindbladError

        \# A five-qubit 1-D embedding with nearest neighbouring connectivity coordinates1 = \[(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5)] coupling\_map1 = \[(0, 1), (1, 2), (2, 3), (3, 4), (4, 5)] embedding1 = Embedding(coordinates1, coupling\_map1)

        \# A six-qubit horseshoe-shaped embedding with nearest neighbouring connectivity coordinates2 = \[(0, 0), (0, 1), (0, 2), (1, 0), (1, 1), (1, 2)] coupling\_map2 = \[(0, 1), (1, 2), (0, 3), (3, 4), (4, 5)] embedding2 = Embedding(coordinates2, coupling\_map2)

        \# A LayerError object circuit = QuantumCircuit(4) qubits = \[1, 2, 3, 4] generators = PauliList(\[“IIIX”, “IIXI”, “IXII”, “YIII”, “ZIII”, “XXII”, “ZZII”]) rates = \[0.01, 0.01, 0.01, 0.005, 0.02, 0.01, 0.01] error = PauliLindbladError(generators, rates) layer\_error = LayerError(circuit, qubits, error)

        \# Draw the layer error on embedding1 layer\_error.draw\_map(embedding1)

        \# Draw the layer error on embedding2 layer\_error.draw\_map(embedding2)

    **Return type**

    `Figure`
  </Function>
</Class>

